⚠ Added validation to urls and restricted domains
Fixes a security vulenurability caused by urls given to TV and Photo Frames.